fixing cmd's (need to fix updater)